# raider

./: .travis.yml  Cargo.toml  Cross.toml  Dockerfile  PACKAGING.md  README.md  config.cfg
.github/workflows/: build.yml  test.yml
debian/: changelog  control  copyright  raider.install  raider.postinst  raider.service  rules
dev/designs/: dashboard.sketch
dev/workspaces/: account.paw  payment.paw  track.paw
doc/fixtures/: raider.sql
res/assets/javascripts/: dashboard.js  dashboard_account.js  dashboard_payouts.js  dashboard_trackers.js
res/assets/stylesheets/: common.css  dashboard.css  initiate.css
res/assets/templates/: __base.tera  __partial.tera  _dashboard_header.tera  _dashboard_menu.tera  _dashboard_payouts.tera  _dashboard_toast.tera  _modal.tera  _popup.tera  _toast.html  dashboard.html  dashboard_account.html  dashboard_account.tera  dashboard_base.html  dashboard_base.tera  dashboard_home.html  dashboard_payouts.html  dashboard_payouts.tera  dashboard_payouts_partial_payouts.tera  dashboard_popup.html  dashboard_toast.html  dashboard_trackers.html  dashboard_trackers.tera  dashboard_welcome.tera  initiate_login.html  initiate_login.tera  initiate_recover.html  initiate_recover.tera  initiate_signup.html  initiate_signup.tera
scripts/: build_packages.sh  release_binaries.sh  sign_binaries.sh
src/: main.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  reader.rs
src/exchange/: manager.rs  mod.rs
src/management/: account.rs  mod.rs
src/notifier/: email.rs  mod.rs
src/responder/: asset_file.rs  auth_guard.rs  catchers.rs  context.rs  macros.rs  management_guard.rs  manager.rs  mod.rs  routes.rs  track_guard.rs  utilities.rs
src/storage/: choices.rs  db.rs  mod.rs  models.rs  schemas.rs
src/track/: mod.rs  payment.rs
tools/cross/cross-x86_64-unknown-linux-gnu/: Dockerfile
