[package]
name = "raider-server"
version = "1.0.0"
description = "Affiliates dashboard. Used by affiliates to generate tracking codes and review their balance."
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/valeriansaliou/raider"
repository = "https://github.com/valeriansaliou/raider.git"
keywords = ["affiliates", "dashboard", "sales", "tracker"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[badges]
travis-ci = { repository = "valeriansaliou/raider", branch = "master" }
coveralls = { repository = "valeriansaliou/raider", branch = "master", service = "github" }

[[bin]]
name = "raider"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.3"
clap = { version = "2.29", default-features = false }
lazy_static = "1.0"
sha2 = "0.7"
time = "0.1"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
validate = "0.6"
url_serde = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false }
native-tls = "0.1"
openssl-probe = "0.1"
lettre = { version = "0.7", features = ["smtp-transport"] }
lettre_email = "0.7"
rocket = { version = "0.3", default-features = false }
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3", features = ["tera_templates"] }
diesel = { version = "1.1", features = ["mysql", "chrono"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
